--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,7 +1,8 @@
 CXX     := clang++
 CXXFLAGS:= -Wall -Wextra -Werror -g
-SRCS=phonebook.cpp
+SRCS=$(wildcard src/*.cpp)
 OBJS=$(SRCS:.cpp=.o)
+INCLUDE=-Iinclude
 NAME=phonebook
 
 
@@ -10,7 +11,7 @@ all     : $(NAME)
 $(NAME) : $(OBJS)
 	$(CXX) $(CXXFLAGS) -o $(NAME) $(OBJS)
 %.o:%.cpp
-	$(CXX) $(CXXFLAGS) -c $< -o $@ 
+	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@ 
 clean:
 	rm -rf $(OBJS)
 fclean:clean
